fixed alignments

--- a/css/index.css
+++ b/css/index.css
@@ -734,6 +734,7 @@ a:hover .fa-circle:before{
   }
 
   .box8 {
+    height: 250px;
     grid-row: 8;
     grid-column: 1/13;
   }
@@ -769,7 +770,7 @@ a:hover .fa-circle:before{
     grid-column: 1/13;
   }
   .box15 {
-    height: 200px;
+    height: 275px;
     grid-row: 16;
     grid-column: 1/13;
   }
@@ -802,5 +803,10 @@ a:hover .fa-circle:before{
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
   }
 
-
+  .boxline2{
+    width: 100%;
+    border: 0px;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+  }
 }
